--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Лабораторная работа №2\n",
-    "## Выполнил студент группы ГРУППА ФИО"
+    "## Выполнил студент группы БВТ2005 Голубков Антон"
    ]
   },
   {
@@ -31,44 +31,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "caring-truck",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#Бинарный поиск"
+    "#Бинарный поиск\n",
+    "class BinarySearch:\n",
+    "    def __init__(self):\n",
+    "        self.data = []\n",
+    "\n",
+    "    def search(self, value):\n",
+    "        left = 0\n",
+    "        right = len(self.data)\n",
+    "\n",
+    "        while left < right:\n",
+    "            middle = (left + right) // 2     #суть- деление массива по середине \n",
+    "            if self.data[middle][0] < value:\n",
+    "                left = middle + 1\n",
+    "            else:\n",
+    "                right = middle\n",
+    "        \n",
+    "        return left\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        index = self.search(key)\n",
+    "        if index < len(self.data) and self.data[index][0] == key:\n",
+    "            self.data[index] = (key, value)\n",
+    "        else:\n",
+    "            self.data.insert(index, (key, value))\n",
+    "\n",
+    "    def __delitem__(self, key):\n",
+    "        index = self.search(key)\n",
+    "        self.data.pop(index)\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        index = self.search(key)\n",
+    "        foundKey, val = self.data[index]\n",
+    "        if foundKey == key:\n",
+    "            return val\n",
+    "        else:\n",
+    "            return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "75af3ea8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Бинарное дерево"
+    "#Бинарное дерево\n",
+    "class Node:\n",
+    "    def __init__(self, key):\n",
+    "        self.key = key\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "    \n",
+    "    def inorder(root):\n",
+    "        if root is not None:\n",
+    "            inorder(root.left)\n",
+    "            print(root.key, end=\" \")\n",
+    "            inorder(root.right)\n",
+    "\n",
+    "    def insert(node, key):\n",
+    "        if node is None:\n",
+    "            return Node(key)\n",
+    "\n",
+    "        if key < node.key:\n",
+    "            node.left = insert(node.left, key)\n",
+    "        else:\n",
+    "            node.right = insert(node.right, key)\n",
+    "            \n",
+    "        return node\n",
+    "    \n",
+    "    def minValueNode(node):\n",
+    "        current = node\n",
+    "        while(current.left is not None):\n",
+    "            current = current.left\n",
+    "        return current\n",
+    "    \n",
+    "    def deleteNode(root, key):\n",
+    "        if root is None:\n",
+    "            return root\n",
+    "        \n",
+    "        if key < root.key:\n",
+    "            root.left = deleteNode(root.left, key)\n",
+    "        elif(key > root.key):\n",
+    "            root.right = deleteNode(root.right, key)\n",
+    "        else:\n",
+    "            if root.left is None:\n",
+    "                temp = root.right\n",
+    "                root = None\n",
+    "                return temp\n",
+    "            elif root.right is None:\n",
+    "                temp = root.left\n",
+    "                root = None\n",
+    "                return temp\n",
+    "            temp = minValueNode(root.right) \n",
+    "            root.key = temp.key\n",
+    "            root.right = deleteNode(root.right, temp.key)\n",
+    "        return root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "abe4b0b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Метод Фибоначчи"
+    "#Метод Фибоначчи\n",
+    "fib_c = [0, 1]\n",
+    "def fibonnaci(n):\n",
+    "    if len(fib_c) - 1 < n:\n",
+    "        fib_c.append(fibonnaci(n - 1) + fibonnaci(n - 2))\n",
+    "    return fib_c[n]\n",
+    "\n",
+    "class FibonacciSearch(BinarySearch):\n",
+    "    \n",
+    "    def search(self, key):  \n",
+    "        m = 0 \n",
+    "        while fibonnaci(m) < len(self.data): \n",
+    "            m += 1\n",
+    "        offset = 0\n",
+    "        while fibonnaci(m) > 1:\n",
+    "            i = min(offset + fibonnaci(m - 1), len(self.data) - 1)\n",
+    "            if key > self.data[i][0]:\n",
+    "                offset = i\n",
+    "                m -= 1\n",
+    "            elif key < self.data[i][0]:\n",
+    "                m -=2\n",
+    "            else:\n",
+    "                return i\n",
+    "        if len(self.data) and self.data[offset][0] < key:\n",
+    "            return offset + 1\n",
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "34ec2894",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Интерполяционный"
+    "#Интерполяционный\n",
+    "def nearMid(arr, low, high, val):\n",
+    "    return low + (high - low) * (val - arr[low][0]) // (arr[high][0] - arr[low][0])\n",
+    "    \n",
+    "class InterpolateSearch(BinarySearch):\n",
+    "    def searchINT(self, value):\n",
+    "        size_of_list = len(self.data) - 1\n",
+    "\n",
+    "        first = 0\n",
+    "        last = size_of_list\n",
+    "\n",
+    "        while first <= last:\n",
+    "            middle = nearMid(self.data, first, last, value)\n",
+    "\n",
+    "            if middle > last or middle < first:\n",
+    "                return None\n",
+    "\n",
+    "            if self.data[middle][0] == value:\n",
+    "                return middle\n",
+    "\n",
+    "            if value > self.data[middle][0]:\n",
+    "                first = middle + 1\n",
+    "            else:\n",
+    "                last = middle - 1\n",
+    "\n",
+    "        if first > last:\n",
+    "            return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f5219c",
+   "metadata": {},
+   "source": [
+    "# Сравнение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d7ccd5f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4780\n",
+      "Бинарный поиск:  0.010000467300415039\n",
+      "4780\n",
+      "Поиск Фибонначи:  0.010999917984008789\n",
+      "4780\n",
+      "Интерполяционный поиск:  0.01100015640258789\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "binary = BinarySearch()\n",
+    "fibon = FibonacciSearch()\n",
+    "interpolate = InterpolateSearch()\n",
+    "arr = []\n",
+    "for x in range(100000):\n",
+    "    binary[x] = x + 245\n",
+    "    fibon[x] = x + 245\n",
+    "    interpolate[x] = x + 245\n",
+    "    arr.append(x + 245)\n",
+    "\n",
+    "\n",
+    "binary_start = time.time()\n",
+    "print(binary[4535])\n",
+    "binary = BinarySearch()\n",
+    "binary_end = time.time()\n",
+    "print(\"Бинарный поиск: \", (binary_end - binary_start))\n",
+    "\n",
+    "fib_start = time.time()\n",
+    "print(fibon[4535])\n",
+    "fibon = FibonacciSearch()\n",
+    "fib_end = time.time()  \n",
+    "print(\"Поиск Фибонначи: \", (fib_end - fib_start))\n",
+    "\n",
+    "int_start = time.time()\n",
+    "print(interpolate[interpolate.searchINT(4535)])\n",
+    "interpolate = InterpolateSearch()\n",
+    "int_end = time.time()  \n",
+    "print(\"Интерполяционный поиск: \", (int_end - int_start))"
    ]
   },
   {
@@ -82,32 +278,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "97f9de37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Простое рехэширование"
+    "#Простое рехэширование\n",
+    "class HashMap:\n",
+    "    def __init__(self):\n",
+    "        self.size = 0\n",
+    "        self.data = []\n",
+    "        self._resize()\n",
+    "    \n",
+    "    def _hash(self, key, i):\n",
+    "        return (hash(key) + i) % len(self.data)\n",
+    "        \n",
+    "    def _find(self, key):\n",
+    "        i = 0;\n",
+    "        index = self._hash(key, i);\n",
+    "        while self.data[index] is not None and self.data[index]!= key:\n",
+    "            i += 1\n",
+    "            index = self._hash(key, i);\n",
+    "        return index;\n",
+    "    \n",
+    "    def _resize(self):\n",
+    "        temp = self.data\n",
+    "        self.data = [None] * (2*len(self.data) + 1)\n",
+    "        for item in temp:\n",
+    "            if item is not None:\n",
+    "                self.data[self._find(item[0])] = item\n",
+    "    \n",
+    "    def __setitem(self, key, value):\n",
+    "        if self.size + 1 > len(self.data) // 2:\n",
+    "            self._resize()\n",
+    "        index = self._find(key)\n",
+    "        if self.data[index] is None:  \n",
+    "            self.size += 1\n",
+    "        self.data[index] = (key, value)\n",
+    "    \n",
+    "    def __getitem__(self, key):\n",
+    "        index = self._find(key)\n",
+    "        if self.data[index] is not None:\n",
+    "            return self.data[index][1]\n",
+    "        raise KeyError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b4b80e3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Рехэширование с помощью псевдослучайных чисел\n"
+    "#Рехэширование с помощью псевдослучайных чисел\n",
+    "class RandomHashMap(HashMap):\n",
+    "    _rand_c = 3455\n",
+    "    \n",
+    "    def _rand(self, i):\n",
+    "        if len(self._rand_c) - 1 < i:\n",
+    "            self._rand_c.append(self._rand(i - 1))\n",
+    "        return (123456789 * self._rand_c[i] + 987654321) % 47456\n",
+    "        \n",
+    "    def _hash(self, key, i):\n",
+    "        return (hash(key) + self._rand(i)) % len(self.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1addc092",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Метод цепочек"
+    "#Метод цепочек\n",
+    "class ChainMap:\n",
+    "    def __init__(self):\n",
+    "        self.size = 0\n",
+    "        self.data = []\n",
+    "        self._resize()\n",
+    "    \n",
+    "    def _hash(self, key):\n",
+    "        return hash(key) % len(self.data)\n",
+    "    \n",
+    "    def _insert(self, index, item):\n",
+    "        if self.data[index] is None:\n",
+    "            self.data[index] = [item]\n",
+    "            return True\n",
+    "        else:\n",
+    "            for i, item_ in enumerate(self.data[index]):\n",
+    "                if item_[0] == item[0]:\n",
+    "                    self.data[index][i] = item\n",
+    "                    return False\n",
+    "            self.data[index].append(item)\n",
+    "            return True\n",
+    "    \n",
+    "    def _resize(self):\n",
+    "        temp = self.data\n",
+    "        self.data = [None] * (2*len(self.data) + 1)\n",
+    "        for bucket in temp:\n",
+    "            if bucket is not None:\n",
+    "                for key, value in bucket:\n",
+    "                    self._insert(self._hash(key), (key, value))\n",
+    "    \n",
+    "    def __setitem__(self, key, value):\n",
+    "        if self.size + 1 > len(self.data) // 1.5:\n",
+    "            self._resize()\n",
+    "        if self._insert(self._hash(key), (key, value)):  \n",
+    "            self.size += 1\n",
+    "    \n",
+    "    def __getitem__(self, key):\n",
+    "        index = self._hash(key)\n",
+    "        if self.data[index] is not None:\n",
+    "            for key_, value in self.data[index]:\n",
+    "                if key_ == key:\n",
+    "                    return value\n",
+    "        raise KeyError()"
    ]
   },
   {
@@ -122,8 +407,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "09de30c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1 b7 c5 d8 e2 f4 g6 h3 \n",
+      "a1 b7 c4 d6 e8 f2 g5 h3 \n",
+      "a1 b6 c8 d3 e7 f4 g2 h5 \n",
+      "a1 b5 c8 d6 e3 f7 g2 h4 \n",
+      "a6 b1 c5 d2 e8 f3 g7 h4 \n",
+      "a4 b1 c5 d8 e2 f7 g3 h6 \n",
+      "a5 b1 c8 d4 e2 f7 g3 h6 \n",
+      "a3 b1 c7 d5 e8 f2 g4 h6 \n",
+      "a5 b1 c4 d6 e8 f2 g7 h3 \n",
+      "a7 b1 c3 d8 e6 f4 g2 h5 \n",
+      "a5 b1 c8 d6 e3 f7 g2 h4 \n",
+      "a4 b1 c5 d8 e6 f3 g7 h2 \n",
+      "a2 b6 c1 d7 e4 f8 g3 h5 \n",
+      "a5 b3 c1 d7 e2 f8 g6 h4 \n",
+      "a8 b3 c1 d6 e2 f5 g7 h4 \n",
+      "a4 b6 c1 d5 e2 f8 g3 h7 \n",
+      "a5 b7 c1 d4 e2 f8 g6 h3 \n",
+      "a6 b3 c1 d8 e4 f2 g7 h5 \n",
+      "a5 b3 c1 d6 e8 f2 g4 h7 \n",
+      "a6 b3 c1 d8 e5 f2 g4 h7 \n",
+      "a4 b8 c1 d3 e6 f2 g7 h5 \n",
+      "a8 b4 c1 d3 e6 f2 g7 h5 \n",
+      "a4 b8 c1 d5 e7 f2 g6 h3 \n",
+      "a4 b7 c1 d8 e5 f2 g6 h3 \n",
+      "a6 b4 c1 d5 e8 f2 g7 h3 \n",
+      "a6 b3 c1 d7 e5 f8 g2 h4 \n",
+      "a7 b3 c1 d6 e8 f5 g2 h4 \n",
+      "a5 b7 c1 d3 e8 f6 g4 h2 \n",
+      "a2 b5 c7 d1 e3 f8 g6 h4 \n",
+      "a2 b8 c6 d1 e3 f5 g7 h4 \n",
+      "a6 b2 c7 d1 e3 f5 g8 h4 \n",
+      "a7 b2 c4 d1 e8 f5 g3 h6 \n",
+      "a8 b2 c4 d1 e7 f5 g3 h6 \n",
+      "a5 b2 c8 d1 e4 f7 g3 h6 \n",
+      "a6 b2 c7 d1 e4 f8 g5 h3 \n",
+      "a5 b2 c6 d1 e7 f4 g8 h3 \n",
+      "a3 b5 c7 d1 e4 f2 g8 h6 \n",
+      "a6 b4 c7 d1 e8 f2 g5 h3 \n",
+      "a5 b8 c4 d1 e7 f2 g6 h3 \n",
+      "a3 b6 c8 d1 e5 f7 g2 h4 \n",
+      "a7 b5 c3 d1 e6 f8 g2 h4 \n",
+      "a6 b4 c7 d1 e3 f5 g2 h8 \n",
+      "a5 b8 c4 d1 e3 f6 g2 h7 \n",
+      "a3 b6 c4 d1 e8 f5 g7 h2 \n",
+      "a3 b6 c8 d1 e4 f7 g5 h2 \n",
+      "a5 b7 c4 d1 e3 f8 g6 h2 \n",
+      "a2 b6 c8 d3 e1 f4 g7 h5 \n",
+      "a2 b5 c7 d4 e1 f8 g6 h3 \n",
+      "a2 b7 c5 d8 e1 f4 g6 h3 \n",
+      "a7 b2 c6 d3 e1 f4 g8 h5 \n",
+      "a8 b2 c5 d3 e1 f7 g4 h6 \n",
+      "a4 b2 c8 d6 e1 f3 g5 h7 \n",
+      "a4 b2 c7 d5 e1 f8 g6 h3 \n",
+      "a3 b6 c2 d7 e1 f4 g8 h5 \n",
+      "a3 b5 c2 d8 e1 f7 g4 h6 \n",
+      "a6 b8 c2 d4 e1 f7 g5 h3 \n",
+      "a3 b8 c4 d7 e1 f6 g2 h5 \n",
+      "a3 b5 c8 d4 e1 f7 g2 h6 \n",
+      "a6 b3 c7 d4 e1 f8 g2 h5 \n",
+      "a6 b3 c5 d7 e1 f4 g2 h8 \n",
+      "a6 b3 c5 d8 e1 f4 g2 h7 \n",
+      "a4 b8 c5 d3 e1 f7 g2 h6 \n",
+      "a4 b7 c5 d3 e1 f6 g8 h2 \n",
+      "a4 b6 c8 d3 e1 f7 g5 h2 \n",
+      "a2 b4 c6 d8 e3 f1 g7 h5 \n",
+      "a4 b2 c5 d8 e6 f1 g3 h7 \n",
+      "a4 b2 c8 d5 e7 f1 g3 h6 \n",
+      "a3 b7 c2 d8 e5 f1 g4 h6 \n",
+      "a3 b6 c2 d5 e8 f1 g7 h4 \n",
+      "a3 b6 c2 d7 e5 f1 g8 h4 \n",
+      "a5 b7 c2 d6 e3 f1 g4 h8 \n",
+      "a5 b7 c2 d6 e3 f1 g8 h4 \n",
+      "a7 b4 c2 d5 e8 f1 g3 h6 \n",
+      "a7 b4 c2 d8 e6 f1 g3 h5 \n",
+      "a5 b7 c2 d4 e8 f1 g3 h6 \n",
+      "a3 b6 c8 d2 e4 f1 g7 h5 \n",
+      "a7 b3 c8 d2 e5 f1 g6 h4 \n",
+      "a4 b7 c5 d2 e6 f1 g3 h8 \n",
+      "a4 b6 c8 d2 e7 f1 g3 h5 \n",
+      "a5 b3 c8 d4 e7 f1 g6 h2 \n",
+      "a2 b7 c3 d6 e8 f5 g1 h4 \n",
+      "a4 b2 c7 d3 e6 f8 g1 h5 \n",
+      "a5 b2 c4 d6 e8 f3 g1 h7 \n",
+      "a3 b7 c2 d8 e6 f4 g1 h5 \n",
+      "a6 b4 c2 d8 e5 f7 g1 h3 \n",
+      "a6 b3 c7 d2 e4 f8 g1 h5 \n",
+      "a6 b3 c7 d2 e8 f5 g1 h4 \n",
+      "a4 b7 c3 d8 e2 f5 g1 h6 \n",
+      "a4 b2 c7 d3 e6 f8 g5 h1 \n",
+      "a5 b2 c4 d7 e3 f8 g6 h1 \n",
+      "a3 b5 c2 d8 e6 f4 g7 h1 \n",
+      "a3 b6 c4 d2 e8 f5 g7 h1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def place_queen(board, i, j):\n",
+    "    for k in range(len(board)):\n",
+    "        board[i][k] += 1\n",
+    "        board[k][j] += 1\n",
+    "        if 0 <= i + j - k < len(board):\n",
+    "            board[i + j - k][k] += 1\n",
+    "        if 0 <= i - j + k < len(board):\n",
+    "            board[i - j + k][k] += 1\n",
+    "    board[i][j] = -1\n",
+    "\n",
+    "def remove_queen(board, i, j):\n",
+    "    for k in range(len(board)):\n",
+    "        board[i][k] -= 1\n",
+    "        board[k][j] -= 1\n",
+    "        if 0 <= i + j - k < len(board):\n",
+    "            board[i + j - k][k] -= 1\n",
+    "        if 0 <= i - j + k < len(board):\n",
+    "            board[i - j + k][k] -= 1\n",
+    "    board[i][j] = 0\n",
+    "\n",
+    "def print_answer(board):\n",
+    "    res = \"\"\n",
+    "    for i in range(len(board)):\n",
+    "        for j in range(len(board)):\n",
+    "            if board[i][j] == -1:\n",
+    "                res += chr(97 + i) + str(j + 1) + ' '\n",
+    "    print(res)\n",
+    "                \n",
+    "def __queens_problem(board, j):\n",
+    "    if j == len(board):\n",
+    "        print_answer(board)\n",
+    "        return\n",
+    "    for i in range(len(board)):\n",
+    "        if board[i][j] == 0:\n",
+    "            place_queen(board, i, j)\n",
+    "            __queens_problem(board, j + 1)\n",
+    "            remove_queen(board, i, j)\n",
+    "\n",
+    "def queens_problem(n):\n",
+    "    board = [[0 for i in range(n)] for j in range(n)]\n",
+    "    __queens_problem(board, 0)\n",
+    "    \n",
+    "queens_problem(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eb60f25",
    "metadata": {},
    "outputs": [],
    "source": []
