--- a/tasks/Task3.ipynb
+++ b/tasks/Task3.ipynb
@@ -29,11 +29,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "concerned-lewis",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "Add a\n",
+      "Add b\n",
+      "Vote b\n",
+      "Vote a\n",
+      "Add c\n",
+      "Vote c\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = int(input())\n",
+    "stack = []\n",
+    "output = \"Yes\"\n",
+    "for i in range(K):\n",
+    "    event = input().split()\n",
+    "    if (output == \"No\"):\n",
+    "        continue\n",
+    "    if (event[0] == \"Add\"):\n",
+    "        stack.append(event[1])\n",
+    "    elif (event[0] == \"Vote\"):\n",
+    "        if (len(stack) == 0) or (event[1] != stack.pop()):\n",
+    "            output = \"No\"\n",
+    "    else:\n",
+    "        output = \"No\"\n",
+    "if (len(stack) != 0):\n",
+    "    output = \"No\"\n",
+    "print(output)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,11 +88,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "coated-highway",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "def polygon(N):\n",
+    "    answer = 3\n",
+    "    while answer <= sqrt(N):\n",
+    "        if N % answer == 0:\n",
+    "            return answer\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "    \n",
+    "    if N % 2 == 0:\n",
+    "        answer = N // 2\n",
+    "    else:\n",
+    "        answer = N\n",
+    "\n",
+    "    return answer\n",
+    "            \n",
+    "\n",
+    "N = int(input())\n",
+    "result = polygon(N)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,11 +149,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "jewish-rocket",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "[4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def forum(num):\n",
+    "    if len(num) == 1:\n",
+    "        if num[0] == '4' or num[0] == '6' or num[0] == '8':\n",
+    "            return [10, 2]\n",
+    "        elif num[0] == '9':\n",
+    "            return [10, 3]\n",
+    "        else:\n",
+    "            return -1\n",
+    "    else:\n",
+    "        accum = 0\n",
+    "        for i in range(len(num)):\n",
+    "            accum += int(num[i])\n",
+    "        return [accum + 1, accum]\n",
+    "\n",
+    "print(forum(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dd9eb43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a9a46a",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -110,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
